RESOLVED FIXED200421
Fix compilation with disabled WebGL
https://bugs.webkit.org/show_bug.cgi?id=200421
Summary Fix compilation with disabled WebGL
Konstantin Tokarev
Reported 2019-08-03 12:37:18 PDT
After r247452 webGLStateTracker is guarded with #if ENABLE(WEBGL)
Attachments
Patch (1.69 KB, patch)
2019-08-03 12:38 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2019-08-03 12:38:31 PDT
Wenson Hsieh
Comment 2 2019-08-03 12:42:57 PDT
Comment on attachment 375490 [details] Patch Thank you for the fix!
WebKit Commit Bot
Comment 3 2019-08-03 13:33:03 PDT
Comment on attachment 375490 [details] Patch Clearing flags on attachment: 375490 Committed r248203: <https://trac.webkit.org/changeset/248203>
WebKit Commit Bot
Comment 4 2019-08-03 13:33:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-08-03 13:34:15 PDT
Note You need to log in before you can comment on or make changes to this bug.