Fix compilation with disabled WebGL https://bugs.webkit.org/show_bug.cgi?id=200421

Reviewed by Wenson Hsieh.

After r247452 webGLStateTracker is guarded with #if ENABLE(WEBGL)

* WebProcess/WebPage/WebPage.cpp:
(WebKit::m_textAutoSizingAdjustmentTimer):


Canonical link: https://commits.webkit.org/214198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248203 268f45cc-cd09-0410-ab3c-d52691b4dbfc